refactor: collect(Collectors.toList())를 toList()로 변경